--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -41,6 +41,9 @@
                     <p>
                         {{ site.description }}
                     </p>
+                    <p>
+                        {{ site.research_interest }}
+                    </p>
 
                 </div>
             </div>
